# churn-prediction-platform

./: .dockerignore  .gitignore  dashboard.py  pyproject.toml  requirements.txt
configs/: default.yaml
scripts/: serve.py  train.py
src/: __init__.py  config.py  pipeline.py
src/data/: generator.py
src/features/: store.py
src/models/: explainer.py  trainer.py
src/monitoring/: drift.py  tracker.py
src/serving/: api.py
src/spark/: processor.py
tests/: test_api.py  test_config.py  test_drift.py  test_feature_store.py  test_generator.py  test_trainer.py
