[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "churn-prediction-platform"
version = "1.0.0"
description = "Production ML platform for SaaS churn prediction"
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
# N803/N806: Allow uppercase X, y - standard ML convention for feature matrices and targets
# N811/N812: Allow `import functions as F` - standard PySpark convention
ignore = ["N803", "N806", "N811", "N812"]
